# micro-apps

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: add-to-project.yml  auto-assign-project.yml  deploy-dev-release.yml  main.yml  release.yml  run-pytest.yml
micro-apps/carbon-management-app/: carbon_management_app.py  pyproject.toml
micro-apps/conservation-voltage-reduction-app/: cvr_main.py  pyproject.toml
micro-apps/no-app/: no_app.py
micro-apps/peak-shaving-app/: peak_shaving_main.py  pyproject.toml
micro-apps/power_factor/: main.py  models.py  plot.py  query.py  test.py
