[tool.poetry]
name = "micro-apps"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
gridappsd-python = "^2023.12.1"
cim-graph = "^0.1.2a0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
